--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -101,7 +101,7 @@
     gap: .5rem;
     margin-top: .5rem;
 }
-.Projects article .info .tags span{
+.Projects article .info .tags li{
     font-size: .75rem;
     line-height: 1rem;
     padding-top: .25rem;
