--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -59,9 +59,9 @@ nav .link:hover {
         font-size: 12px;
         font-weight: 700;
     }
-    nav .link.active {
+    /* nav .link.active {
         color: var(--text-color);
-    }
+    } */
     
     
 }
