--- a/src/Components/Welcome/Welcome.css
+++ b/src/Components/Welcome/Welcome.css
@@ -22,12 +22,12 @@
 }
 
 .profile p {
-    color: rgb(209 213 219);
+    color: var(--color-subtitle);
     font-size: 1.25rem;
     line-height: 1.75rem;
 }
 .profile strong{
-    color: #60dbf8;
+    color: var(--strong-color);
 }
 
 .Networks{
@@ -37,9 +37,9 @@
     margin-top: 1rem;
 }
 .Networks .link{
-    background-color: rgb(31 41 55);
-    border-color: rgb(75 85 99);
-    color: #fff;
+    background-color: var(--bg-networks-link);
+    border-color: var(--border-networks-link);
+    color: var(--color-networks-link);
     padding-top: .25rem;
     padding-bottom: .25rem;
     padding-left: 1rem;
@@ -80,15 +80,11 @@
     }
     
     .profile p {
-        color: rgb(209 213 219);
         font-size: 20px;
         line-height: 1.75rem;
     }
 
     .Networks .link{
-        background-color: rgb(31 41 55);
-        border-color: rgb(75 85 99);
-        color: #fff;
         padding-top: .2rem;
         padding-bottom: .2rem;
         padding-left: .65rem;
